--- a/ComingSoon/index.html
+++ b/ComingSoon/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>ComingSoon - Bootstrap Coming Soon Template</title>
+  <title>DEX TECH X</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!--   <link href="assets/img/favicon.png" rel="icon"> -->
+<!--   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -72,10 +72,10 @@
       </div>
 
       <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.twitter.com/dextechx" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.faceboook.com/dextechx" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/dextechx" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/dextechx" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -188,14 +188,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>ComingSoon</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/comingsoon-free-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <strong><span>DEX TECH X 2023</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End #footer -->
