--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">DEX TECH X</h1>
-                                <p>A Nigerian Tech Company.<br/> We Create Apps, Websites, Graphics and Softwares. Hire us by clicking the button below.</p>
+                                <p>A Nigerian Tech Company.<br/> We Create Apps, Websites, Graphics and Softwares.</p>
                             </div>
                             <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">HIRE US NOW</a>
                         </div>
@@ -102,9 +102,9 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h2 class="carousel-title">DEX TECH X</h2>
-                                <p>A Nigerian Tech Company.<br/> We Create Apps, Websites, Graphics and Softwares. Hire us by clicking the button below.</p>
+                                <p>A Nigerian Tech Company.<br/> We Create Apps, Websites, Graphics and Softwares. </p>
                             </div>
-                            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">HIRE US NOW</a>
+                            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">HIRE US</a>
                         </div>
                     </div>
                 </div>
